k8s-manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yopy-app
  labels:
    name: yopy-app
