k8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yopy-ingress
  namespace: yopy-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: yopy-backend-service
            port:
              number: 3000
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: yopy-frontend-service
            port:
              number: 80
